<resources>
    <string name="app_name">Annotation MVP practice</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_logout">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>
